--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Authentification NodeJs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "keywords": [
     "NODEJS"
@@ -15,18 +14,18 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bulma": "^0.6.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.15.6",
     "log4js": "^0.6.29",
+    "mocha": "^5.0.0",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "sequelize": "^4.31.0",
     "serve-favicon": "^2.3.0"
-  },
-  "scripts": {
-	"test": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml"
   }
 }
